# EcoPulse-AI

./: Dockerfile  EcoPulse_AI_Presentation.html  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: flatten-repo.yml
server/: app.py
server /: app.py
