[project]
name = "ecopulse-ai"
version = "0.1.0"
description = "Smart Energy Management System"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "openai>=1.12.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "inference:main" 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
